--- a/_posts/2022-11-30-通訊與網路概論.md
+++ b/_posts/2022-11-30-通訊與網路概論.md
@@ -2,12 +2,11 @@
 layout: post
 title: 通訊與網路概論
 tags: [class]
-author: P'Min
 ---
 
 
 ## SISCO router 設定
-<img src="assets/img/post_img_1.png">
+<img src="/blog/assets/img/post_img_1.png">
 
 ### 指令目錄
 <a href="#-通用指令">通用指令</a> - <a href="#-設定ip">設定ip</a> - <a href="#-設定靜態路由ip">設定靜態路由ip</a> - <a href="#-設定預設路由-DGW-ip">設定預設路由 DGW ip</a> - <a href="#-顯示路由ip">顯示路由ip</a> - <a href="#-設定OSPF">設定OSPF</a> - <a href="#-顯示設定狀態">顯示設定狀態</a> - <a href="#-儲存狀態指令">儲存狀態指令</a>
