feat: add posts and update style

--- a/_posts/2023-08-04-如何設計情緒板.md
+++ b/_posts/2023-08-04-如何設計情緒板.md
@@ -1,5 +1,9 @@
+---
+layout: post
+title: 如何設計情緒板
+tags: [情緒板,Web Design,UI/UX]
+---
 
-# MOOD BOARD
 ## 包含
 - 顏色：你的品牌和什麼相關？適合什麼顏色？
 - 字體：你的品牌名稱之後要用什麼字體？
