--- a/_posts/2023-07-17-網頁無障礙.md
+++ b/_posts/2023-07-17-網頁無障礙.md
@@ -10,57 +10,57 @@ tags: [網頁無障礙,Web Design]
 - landmark
 <img src="/blog/assets/img/post_img_2.jpg">
 段落和內容
-```html
+~~~ html
 <article>
-```
-```html
+~~~
+~~~ html
 <q> 單行的引用文字
-``` 
-```html
+~~~ 
+~~~ html
 <blockquote> 段落的的引用文字
-``` 
-```html
+~~~ 
+~~~ html
 <ul> <ol> <li>
-```
-```html
+~~~
+~~~ html
 <p>
-```
-```html
+~~~
+~~~ html
 <br>
-```
-```html
+~~~
+~~~ html
 <del> 刪除的內容
-```
-```html
+~~~
+~~~ html
 <i> 斜體
-```
-```html
+~~~
+~~~ html
 <b> 粗體
-```
-```html
+~~~
+~~~ html
 <em> 強調的用意
-```
-```html
+~~~
+~~~ html
 <strong> 重要的內容
-```
-```html
+~~~
+~~~ html
 <ins> 插入的內容
-```
-```html
+~~~
+~~~ html
 <sub> 下標
-```
-```html
+~~~
+~~~ html
 <sup> 上標
-```
-```html
+~~~
+~~~ html
 <hr>
-```
-```html
+~~~
+~~~ html
 <code>
-```
-```html
+~~~
+~~~ html
 <time>
-```
+~~~
 
 ## 文字
 - 行高至少為字體的1.5倍
