--- a/_posts/2023-07-14-ejs.md
+++ b/_posts/2023-07-14-ejs.md
@@ -1,5 +1,10 @@
-# 模板引擎
-## ejs
+---
+layout: post
+title: ejs
+tags: [ejs,Web Design]
+---
+
+
 ```
 ejs.render(ejs_str, data, options);
 // => Rendered HTML string
@@ -8,6 +13,7 @@ ejs.renderFile(filename, data, options, function(err, str){
     // str => Rendered HTML string
 });
 ```
+
 ```
 <% '腳本'標籤，用於流程控制，不輸出。
 <%_ 刪除其前面的空格符
