feat: update post

--- a/_posts/2023-07-14-Github 筆記.md
+++ b/_posts/2023-07-14-Github 筆記.md
@@ -21,3 +21,7 @@ https://[你的帳號].github.io/[專案名稱]
 
 ## 介紹頁 生成器
 [GPRM](https://gprm.itsvg.in/)
+
+## 刪除
+1. 執行 git 回復 `git reset <commit>`
+2. 強制推上 github `git push origin <branch> --force`
