--- a/_posts/2023-07-14-JS.md
+++ b/_posts/2023-07-14-JS.md
@@ -1,7 +1,11 @@
-# JS
+---
+layout: post
+title: JS
+tags: [JS,Web Design]
+---
 
 ## DOMContentLoaded 與 load 事件
-<img src="./img/HTML%20load.png">
+<img src="{{ site.baseurl }}/assets/img/post_img_5.png">
 
 DOM load
 ```
@@ -9,12 +13,14 @@ document.addEventListener("DOMContentLoaded", function(){
   // DOM Ready!
 });
 ```
+
 全部元素 load
 ```
 window.addEventListener("load", function(event) {
   // All resources finished loading!
 });
 ```
+
 子母畫面(Pip)
 ```
 function togglePictureInPicture() {
@@ -25,6 +31,7 @@ function togglePictureInPicture() {
   }
 }
 ```
+
 click Event 阻止向下傳遞
 ```
 e.stopPropagation();
