--- a/_posts/2023-07-17-網頁無障礙.md
+++ b/_posts/2023-07-17-網頁無障礙.md
@@ -8,7 +8,7 @@ tags: [網頁無障礙,Web Design]
 - 在body的左上要有"進入內容區塊"的anchor
 - 設定accesskey方便使用者用鍵盤跳躍
 - landmark
-<img src="/blog/assets/img/post_img_2.jpg">
+<img src="{{ site.baseurl }}/assets/img/post_img_2.jpg">
 段落和內容
 
 ```html
@@ -78,11 +78,11 @@ icon的img要使用alt提示。
 <mark>元件不可在一秒內閃爍超過3次</mark>，且不可藉由提供暫停或終止來符合規範，解決方法:降低閃爍頻率，或降低(?對比度和範圍)。
 
 ## 圖、圖表
-<img src="/blog/assets/img/post_img_3.jpg" />
+<img src="{{ site.baseurl }}/assets/img/post_img_3.jpg" />
 
 
 ## 表格
-<img src="/blog/assets/img/post_img_4.jpg" />
+<img src="{{ site.baseurl }}/assets/img/post_img_4.jpg" />
 
 `<tfoot>` 放註解或總計。
 
